crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_detailed.snap
---
source: src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "actual_value": 200,
      "constraints": [
        {
          "exclusive": false,
          "type": "minimum",
          "value": 0.0
        },
        {
          "exclusive": false,
          "type": "maximum",
          "value": 150.0
        }
      ],
      "expected_type": "integer",
      "field_path": "age",
      "message": "Parameter 'age' must be between 0 and 150",
      "parameter": "age",
      "type": "constraint-violation"
    }
  ]
}
