crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_enum.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "constraint-violation",
      "parameter": "status",
      "message": "Parameter 'status' must be one of: available, pending, sold",
      "field_path": "status",
      "actual_value": "unknown",
      "expected_type": "string",
      "constraints": [
        {
          "type": "enum-values",
          "values": [
            "available",
            "pending",
            "sold"
          ]
        }
      ]
    }
  ]
}
