crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_format.snap
---
source: src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "actual_value": "not-an-email",
      "constraints": [
        {
          "format": "email",
          "type": "format"
        }
      ],
      "expected_type": "string",
      "field_path": "contact.email",
      "message": "Invalid email format",
      "parameter": "email",
      "type": "constraint-violation"
    }
  ]
}
