crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_max_items.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "constraint-violation",
      "parameter": "categories",
      "message": "Array has 4 items but maximum is 3",
      "field_path": "categories",
      "actual_value": [
        "a",
        "b",
        "c",
        "d"
      ],
      "expected_type": "array",
      "constraints": [
        {
          "type": "max-items",
          "value": 3
        }
      ]
    }
  ]
}
