crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_max_properties.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "constraint-violation",
      "parameter": "config",
      "message": "Object has 3 properties but maximum is 2",
      "field_path": "config",
      "actual_value": {
        "a": 1,
        "b": 2,
        "c": 3
      },
      "expected_type": "object",
      "constraints": [
        {
          "type": "max-properties",
          "value": 2
        }
      ]
    }
  ]
}
