crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_min_items.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "constraint-violation",
      "parameter": "tags",
      "message": "Array has 1 items but minimum is 2",
      "field_path": "tags",
      "actual_value": [
        "tag1"
      ],
      "expected_type": "array",
      "constraints": [
        {
          "type": "min-items",
          "value": 2
        }
      ]
    }
  ]
}
