crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_min_properties.snap
---
source: src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "actual_value": {
        "name": "test",
        "version": "1.0"
      },
      "constraints": [
        {
          "type": "min-properties",
          "value": 3
        }
      ],
      "expected_type": "object",
      "field_path": "metadata",
      "message": "Object has 2 properties but minimum is 3",
      "parameter": "metadata",
      "type": "constraint-violation"
    }
  ]
}
