crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_multiple_of.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "constraint-violation",
      "parameter": "price",
      "message": "10.5 is not a multiple of 3",
      "field_path": "price",
      "actual_value": 10.5,
      "expected_type": "number",
      "constraints": [
        {
          "type": "multiple-of",
          "value": 3.0
        }
      ]
    }
  ]
}
