crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_unique_items.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "constraint-violation",
      "parameter": "numbers",
      "message": "Array items [1, 2, 2, 3] are not unique",
      "field_path": "numbers",
      "actual_value": [
        1,
        2,
        2,
        3
      ],
      "expected_type": "array",
      "constraints": [
        {
          "type": "unique-items"
        }
      ]
    }
  ]
}
